name:                lsfrom
version:             0.1
synopsis:            List dir files starting from a specific name
description:
            `lsfrom` lists files in the current directory that start with
            a particular sequence of characters and those after it with respect
            to collation.

            eg `$ cd /; echo $(lsfrom sy)` outputs "sys tmp usr var" for me.

            This may be useful for continuing a script on the files in a dir
            after a failure, etc.
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen
maintainer:          petersen@redhat.com
copyright:           2018  Jens Petersen
-- category:
build-type:          Simple
cabal-version:       >=1.10

executable lsfrom
  main-is:             Main.hs
  build-depends:       base,
                       directory >= 1.2.5.0
  default-language:    Haskell2010
  ghc-options:        -fwarn-missing-signatures -Wall
