name:                lsfrom
version:             0.1
synopsis:            List dir files starting from a specific name
description:
            `lsfrom` lists files in the current directory that start with
            a particular sequence of characters and those after it with respect
            to collation.

            This may be useful for continuing a script on the files in a dir
            after a failure, etc.
license:             BSD3
license-file:        LICENSE
author:              Jens Petersen
maintainer:          petersen@redhat.com
copyright:           2018,2021  Jens Petersen
category:            Utility
homepage:            https://github.com/juhp/lsfrom
bug-reports:         https://github.com/juhp/lsfrom/issues
build-type:          Simple
cabal-version:       1.18
extra-doc-files:     ChangeLog.md
                     README.md

source-repository head
  type:                git
  location:            https://github.com/juhp/lsfrom.git

executable lsfrom
  main-is:             Main.hs
  build-depends:       base < 5,
                       directory >= 1.2.5.0,
                       filepath
  default-language:    Haskell2010
  ghc-options:        -fwarn-missing-signatures -Wall
